# service-schema-version-mapper

./: .replit  README.md  jsonize-mapping.json  mapping.py  pyproject.toml  requirements.txt  transformations.py
input/: ArrivalSequenceServiceDefinition.json  CCS FlightDataDistribution.json  OpenATM.json  README.md
output/: README.md
